feat: Refine AI chatbot instructions and SEO meta tags
Improves chatbot's directness and conciseness, ensuring it captures leads efficiently. Also updates SEO meta tags with a focus on Florida and specific keywords to better target the intended audience.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags - Optimized for High CTR & Latino Market in USA -->
-    <title>Agencia de IA y Growth Marketing para Negocios Latinos en USA | Pulse Agency</title>
-    <meta name="description" content="¿Tu negocio se estancó? Pulse Agency automatiza tus ventas y atención al cliente con Inteligencia Artificial. Especialistas en escalar PYMES latinas en Estados Unidos. Agenda hoy.">
-    <meta name="keywords" content="agencia de inteligencia artificial miami, automatización de ventas, growth marketing usa, consultoría para latinos, crm automatizado, marketing digital hispano, escalar negocio usa">
+    <title>Agencia de IA y Marketing para Negocios Latinos en USA (Florida) | Pulse Agency</title>
+    <meta name="description" content="Pulse Agency: Agencia líder en Automatización IA y Marketing Digital para PYMES Latinas en Florida y USA. Escala tu negocio con tecnología y estrategias de crecimiento.">
+    <meta name="keywords" content="automatización IA, PYMES latinas USA, growth marketing hispano, agencia de inteligencia artificial florida, marketing digital para latinos, crm con ia, escalar negocio en estados unidos, agencia de marketing miami">
     <meta name="author" content="Pulse Agency LLC">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pulseagencyusa.com/" />
@@ -63,7 +63,7 @@
         "https://www.instagram.com/pulseagencyusa",
         "https://www.linkedin.com/company/pulseagencyusa"
       ],
-      "description": "Agencia líder en automatización con Inteligencia Artificial y Growth Marketing para escalar empresas latinas en Estados Unidos."
+      "description": "Pulse Agency ayuda a PYMES latinas en Florida y USA a escalar mediante Automatización con IA, CRM y Growth Marketing."
     }
     </script>
 
@@ -73,16 +73,16 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pulseagencyusa.com/">
-    <meta property="og:title" content="Automatiza tu Negocio en USA con IA | Pulse Agency">
-    <meta property="og:description" content="Ayudamos a emprendedores latinos a facturar más trabajando menos. Sistemas de IA, CRM y Ads que funcionan 24/7.">
+    <meta property="og:title" content="Agencia de IA y Marketing para Negocios Latinos en USA (Florida) | Pulse Agency">
+    <meta property="og:description" content="Automatizamos ventas y atención al cliente para PYMES hispanas en Estados Unidos. Descubre cómo la IA puede escalar tu negocio hoy.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?q=90&w=1920&auto=format&fit=crop">
     <meta property="og:locale" content="es_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://pulseagencyusa.com/">
-    <meta property="twitter:title" content="Pulse Agency | IA y Growth para Emprendedores Latinos">
-    <meta property="twitter:description" content="Transforma tu PYME con automatización inteligente. Resultados reales y escalables para el mercado hispano en EE. UU.">
+    <meta property="twitter:title" content="Pulse Agency | IA y Marketing para Latinos en USA">
+    <meta property="twitter:description" content="Automatización inteligente y Growth Marketing para escalar tu negocio en Florida y todo Estados Unidos.">
     <meta property="twitter:image" content="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?q=90&w=1920&auto=format&fit=crop">
 
     <!-- Styles & Fonts -->
