feat: Update branding and social links
Updates the branding name in the title and keywords to "Pulse Agency" instead of "Pulse Agency IA". Also, updates social media links in the schema markup to reflect the new branding.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags - Optimized for High CTR & Latino Market in USA -->
-    <title>Agencia de IA y Marketing para Negocios Latinos en USA (Florida) | Pulse Agency</title>
+    <title>Pulse Agency | Agencia de IA y Marketing para Negocios Latinos en USA (Florida)</title>
     <meta name="description" content="Pulse Agency: Agencia líder en Automatización IA y Marketing Digital para PYMES Latinas en Florida y USA. Escala tu negocio con tecnología y estrategias de crecimiento.">
-    <meta name="keywords" content="automatización IA, PYMES latinas USA, growth marketing hispano, agencia de inteligencia artificial florida, marketing digital para latinos, crm con ia, escalar negocio en estados unidos, agencia de marketing miami">
+    <meta name="keywords" content="automatización IA, PYMES latinas USA, growth marketing hispano, agencia de inteligencia artificial florida, marketing digital para latinos, crm con ia, escalar negocio en estados unidos, agencia de marketing miami, pulse agency">
     <meta name="author" content="Pulse Agency LLC">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pulseagencyusa.com/" />
@@ -59,9 +58,9 @@
         "name": "United States"
       },
       "sameAs": [
-        "https://www.facebook.com/pulseagencyusa",
-        "https://www.instagram.com/pulseagencyusa",
-        "https://www.linkedin.com/company/pulseagencyusa"
+        "https://www.facebook.com/pulseagency",
+        "https://www.instagram.com/pulseagency",
+        "https://www.linkedin.com/company/pulseagency"
       ],
       "description": "Pulse Agency ayuda a PYMES latinas en Florida y USA a escalar mediante Automatización con IA, CRM y Growth Marketing."
     }
@@ -73,7 +72,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pulseagencyusa.com/">
-    <meta property="og:title" content="Agencia de IA y Marketing para Negocios Latinos en USA (Florida) | Pulse Agency">
+    <meta property="og:title" content="Pulse Agency | IA y Marketing para Negocios Latinos en USA">
     <meta property="og:description" content="Automatizamos ventas y atención al cliente para PYMES hispanas en Estados Unidos. Descubre cómo la IA puede escalar tu negocio hoy.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?q=90&w=1920&auto=format&fit=crop">
     <meta property="og:locale" content="es_US">
@@ -126,6 +125,8 @@
             background-color: #020B1A;
             color: white;
             overflow-x: hidden;
+            font-family: 'Inter', sans-serif;
+            font-weight: 400;
         }
         .text-gradient-cyan {
             background: linear-gradient(to right, #00F2FF, #6a00ff);
